--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,237 @@
+body {
+    font-family: "Roboto", 'Raleway', Verdana, sans-serif;
+    color: #212121;
+}
+
+
 .list {
     list-style: none;
 }
+.link {
+    text-decoration: none;
+}
+
+.section-title {
+        font-weight: 700;
+            font-size: 36px;
+            line-height: calc(42/36);
+            text-align: center;
+            letter-spacing: 0.03em;
+        
+            color: #212121;
+}
+/*------------------------header----------------------------------*/
+
+header {
+    background: #ffffff;
+}
+.logo {
+    text-decoration: none;
+    width: 145px;
+    height: 31px;
+    left: 215px;
+    top: 24px;
+
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: calc(31/26);
+    letter-spacing: 0.03em;
+
+    color: #2196F3;
+}
+
+.logo-header {
+    color: #000000;
+}
+.nav-list {
+    font-weight: 500;
+        font-size: 14px;
+        line-height: calc(16/14);
+        letter-spacing: 0.02em;
+    
+        color: #212121;
+}
+
+.nav-link:hover, .nav-link:focus {
+    color: #2196F3;
+}
+
+.nav-link {
+    color: #212121;
+        cursor: pointer;
+    
+}
+
+.header-mail-link {
+    color: #2196F3;
+}
+
+.header-mail-link:hover, .header-mail-link:focus {
+    color: #000000;
+}
+
+.header-phone-link {
+    font-weight: 500;
+        font-size: 14px;
+        line-height: calc(16/14);
+        letter-spacing: 0.02em;
+    
+        color: #757575
+}
+
+.header-phone-link:hover, .header-phone-link:focus {
+    color: #2196F3;
+}
+
+/*------------------------------hero----------------------*/
+
+
+.hero {
+    font-weight: 900;
+        font-size: 44px;
+        line-height: calc(60/44);
+        text-align: center;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+    color: #ffffff;
+    background: #2F303A;
+}
+
+.order-button {   
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    font-weight: 700;
+        font-size: 16px;
+        line-height: calc(30/16);
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.06em;
+    
+        color: #FFFFFF;
+        border-radius: 4px;
+    background-color: #2196F3;
+    cursor: pointer;
+    
+}
+.order-button:hover, .order-button:focus {
+    background-color: #ffffff;
+    color: #2196F3;
+}
+
+/*---------specs----------------*/
+
+.speciality-title {
+    display: none;
+}
+
+.speciality-sub-title {
+        font-weight: 700;
+            font-size: 14px;
+            line-height: calc(16/14);
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+        
+            color: #212121;
+}
+
+.speciality-text {
+    font-size: 14px;
+        line-height: calc(24/14);
+        letter-spacing: 0.03em;
+    
+        color: #757575;
+}
+
+/*-------------activity---------------*/
+
+
+
+/*---------------team------------------*/
+
+.team-member {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: calc(19/16);
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: #212121;
+}
+
+.work-position {
+    font-size: 16px;
+        line-height: calc(19/16);
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: #757575;
+}
+
+/*--------------------------------------------------------portfolio-----------------------*/
+
+.filter-buttton {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: calc(26/16);
+        text-align: center;
+        letter-spacing: 0.03em;
+
+        color: #212121;
+        background: #F5F4FA;
+        border-radius: 4px;
+        cursor: pointer;
+}
+.filter-buttton:hover, .filter-buttton:focus {
+   color: #ffffff;
+    background-color: #2196F3;
+}
+
+.section-title {}
+
+.projects-title {}
+
+.project-title {}
+
+.project-type {}
+
+/*-----------------------footer--------------------------*/
+
+footer {
+    background: #2F303A;
+}
+.logo-footer {
+    color: #ffffff;
+}
+
+.footer-link:hover, .footer-link:focus {
+    color: #2196F3;
+}
+.address {
+    font-style: normal;
+    font-size: 14px;
+        line-height: calc(24/14);
+        letter-spacing: 0.03em;
+    
+        color: #FFFFFF;
+}
+
+.footer-mail-link {
+    font-style: normal;
+    font-size: 14px;
+        line-height: calc(24/14);
+        letter-spacing: 0.03em;
+    
+        color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-phone-link {
+    font-style: normal;
+    font-size: 14px;
+        line-height: calc(24/14);    
+        letter-spacing: 0.03em;
+    
+        color: rgba(255, 255, 255, 0.6);
+}
+
