--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --secondary-text-color: #212121;
   --accent-color: #2196f3;
   --secondary-accent-color: #ffffff;
+  --main-background-color: #ffffff;
+  --secondary-background-color: ##2f303a;
 }
 
 body {
@@ -11,7 +13,7 @@ body {
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--main-text-color);
-  background-color: var(--secondary-accent-color);
+  background-color: var(--main-background-color);
 }
 .list {
   list-style: none;
