--- a/css/styles.css
+++ b/css/styles.css
@@ -90,11 +90,15 @@ body {
 .team {
   font-size: 16px;
   line-height: calc(19 / 16);
+  background-color: #f5f4fa;
 }
 .team .subtitle {
   font-weight: 500;
 }
 /* ---------------------projects--------------------- */
+.projects {
+  background-color: #f5f5f5;
+}
 .projects .subtitle {
   font-size: 18px;
   line-height: calc(36 / 18);
