--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ body {
   color: var(--secondary-text-color);
 }
 .button {
+  font-family: iherit;
   color: var(--secondary-text-color);
   background-color: var(--primary-white-color);
 }
